# rosetta-teamVyom-forge2026-igniteai-hackathon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run-dev.sh
alembic/: env.py
alembic/versions/: 57f5ac9a2f11_create_data_sources_table.py  a1b2c3d4e5f6_create_excel_schema_tables.py  b2c3d4e5f6a7_create_conversation_tables.py  c3d4e5f6a7b8_add_semantic_enrichment_fields.py  d4e5f6a7b8c9_add_conversation_state_columns.py  dce8846e5d56_create_users_table.py
core/: config.py  logging.py  observability.py  server.py
core/agents/: __init__.py  base.py  extractor.py  mapper.py  orchestrator.py  semantic_enricher.py
core/api/v1/: __init__.py
core/api/v1/routes/: __init__.py  auth.py  data_sources.py  excel_agent.py
core/api/v1/schemas/: __init__.py  auth.py  data_source.py  excel_agent.py
core/cache/: custom_key_maker.py  redis_backend.py
core/database/: __init__.py  session.py
core/dependencies/: __init__.py  auth.py
core/exceptions/: __init__.py  base.py  handlers.py
core/middlewares/: __init__.py  cors.py  logging.py  security.py
core/models/: __init__.py  conversation.py  data_source.py  excel_schema.py  user.py
core/repository/: __init__.py  base.py
core/rosetta/: __init__.py  audit.py  auditor.py  bridge.py  cell_context.py  conversation.py  coordinator.py  evaluator.py  formula_parser.py  graph.py  graph_viz.py  models.py  parser.py  pivot_parser.py  pricing.py  reasoning.py  tools.py
core/rosetta/analytics/: __init__.py  aggregators.py  data_quality.py  filters.py  goal_seek.py  sensitivity.py  sql.py  stats.py  time_series.py  view.py
core/rosetta/specialists/: __init__.py  formula_explainer.py
core/rosetta/tests/: test_auditor_negation.py
core/schemas/: base.py
core/semantic_layer/: example-prompt.md
core/services/: __init__.py  auth.py  conversation.py  data_source.py  excel_agent.py
core/utils/: rate_limit.py
core/vector/: __init__.py  chunk_generator.py  client.py  embedding.py  excel_parser.py  knowledge_base.py
data/: dealership_financial_model.xlsx  energy_portfolio_model.xlsx
docs/: HANDBOOK.md  ROSETTA_APPLICATION_OVERVIEW.md  architecture.md  runbook.md
monitoring/: prometheus.yml
scripts/: init-db.sql  init_data.py  setup_jaeger.sh
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/api/: auth.ts  dataSources.ts  excelAgent.ts
ui/src/components/: AnalyticsChart.tsx  AnswerMarkdown.tsx  DependencyGraphCard.tsx  EquationChips.tsx  FormulaBreakdown.tsx  FormulaMap.tsx  FormulaModal.tsx  GoalSeekConvergence.tsx  Layout.tsx  ReasoningModal.tsx  ReasoningTheater.tsx  SchemaInspector.tsx  Sidebar.tsx  TornadoChart.tsx
ui/src/context/: AuthContext.tsx
ui/src/pages/: Dashboard.tsx  DataSourceDetail.tsx  GoogleCallback.tsx  Home.tsx  Login.tsx
